MSCA-318 - fixing chrome gaps without resorting to important

--- a/docroot/themes/msca_theme/sass/homepage/_foundation.scss
+++ b/docroot/themes/msca_theme/sass/homepage/_foundation.scss
@@ -15,7 +15,6 @@
 }
 
 .paragraph--type--foundation-highlights .container > div {
-  @extend .row;
   margin-bottom: 0;
 }
 
@@ -28,9 +27,9 @@
   }
 }
 
-.paragraph {
-  margin-bottom: 0!important;
-}
+//.paragraph {
+//  margin-bottom: 0!important;
+//}
 
 .homepage-foundation-header h2 {
   @extend .thin-heading;
